manifests/environments/tt02/apps/service/ingress-hostname.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: service
spec:
  hostnames:
    - dialogporten.tt02.dis-core.altinn.cloud
